--- a/loan-simulator/src/app/app.component.html
+++ b/loan-simulator/src/app/app.component.html
@@ -1,3 +1,174 @@
 <router-outlet></router-outlet>
 
-<mat-slider min="1" max="100" step="1" value="50"></mat-slider>
+<br>
+<div class="container">
+    <div class="row">
+        <h1>Kalkulator kredytowy</h1>
+        <div class="col-6">
+            <div class="mt-1">
+                <span>1K </span>
+                <mat-slider thumbLabel [displayWith]="formatAmount" aria-label="units" [min]="1000" [max]="1000000" [step]="1000" style="width: 90%;" [(ngModel)]="loanAmount" (ngModelChange)="recalculateLoan()"></mat-slider>
+                <span>1M </span>
+            </div>
+        </div>
+        <div class="col-2">
+            <mat-form-field class="example-full-width">
+                <mat-label>Kwota kredytu</mat-label>
+                <input type="number" min="1000" max="1000000" matInput [(ngModel)]="loanAmount" (ngModelChange)="recalculateLoan()">
+            </mat-form-field>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6">
+            <div class="mt-1">
+                <span>1 </span>
+                <mat-slider thumbLabel [min]="1" [max]="30" [step]="1" style="width: 90%;" [(ngModel)]="loanYears" (ngModelChange)="recalculateLoan()"></mat-slider>
+                <span>30 </span>
+            </div>
+        </div>
+        <div class="col-2">
+            <mat-form-field class="example-full-width">
+                <mat-label>Czas kredytu w latach</mat-label>
+                <input type="number" min="1" max="30" matInput [(ngModel)]="loanYears" (ngModelChange)="recalculateLoan()">
+            </mat-form-field>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-6">
+            <div class="mt-1">
+                <span>0.1%</span>
+                <mat-slider thumbLabel [displayWith]="formatIntersetRate" [min]="0.10" [max]="30" [step]="0.01" style="width: 90%;" [(ngModel)]="interestRate" (ngModelChange)="recalculateLoan()"></mat-slider>
+                <span>30%</span>
+            </div>
+        </div>
+        <div class="col-2">
+            <mat-form-field class="example-full-width">
+                <mat-label>Oprocentowanie</mat-label>
+                <input type="number" min="0.0" max="30" matInput [(ngModel)]="interestRate" (ngModelChange)="recalculateLoan()">
+            </mat-form-field>
+        </div>
+    </div>
+    <div class="row summary">
+        <div class="col-5">
+            <p class="center" style="font-size: 30px;">Rata miesięczna : <b>{{loan.monthlyPayment | currency : "PLN"}}</b></p>
+        </div>
+        <div class="col-4">
+            <p class="center2" style="font-size: 23px;">
+                Odsetki suma : <b>{{loan.odsetkiSuma | currency : "PLN" }}</b>
+            </p>
+            <p class="center2" style="font-size: 23px;">
+                Spłata razem : <b>{{loan.splataRazem | currency : "PLN"}}</b>
+            </p>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+
+        <div class="col-4">
+            <h1>Harmonogram spłat</h1>
+            <table mat-table [dataSource]="loan.harmonogram" class="mat-elevation-z8">
+
+                <!--- Note that these columns can be defined in any order.
+                  The actual rendered columns are set as a property on the row definition" -->
+
+                <!-- Position Column -->
+                <ng-container matColumnDef="miesiac">
+                    <th mat-header-cell *matHeaderCellDef> Miesiąc </th>
+                    <td mat-cell *matCellDef="let element"> {{element.numerMiesiaca}} </td>
+                </ng-container>
+
+                <!-- Name Column -->
+                <ng-container matColumnDef="kwota">
+                    <th mat-header-cell *matHeaderCellDef> Kwota do spłaty</th>
+                    <td mat-cell *matCellDef="let element"> {{element.kwotaKredytu | currency : "PLN"}} </td>
+                </ng-container>
+
+                <!-- Weight Column -->
+                <ng-container matColumnDef="odsetki">
+                    <th mat-header-cell *matHeaderCellDef> Odsetki </th>
+                    <td  mat-cell *matCellDef="let element"> {{element.odsetki | currency : "PLN"}} </td>
+                </ng-container>
+
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="kapital">
+                    <th mat-header-cell *matHeaderCellDef> Kapitał </th>
+                    <td mat-cell *matCellDef="let element"> {{element.kapital | currency : "PLN"}} </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
+        <div class="col-6">
+            <h1>Symulacja wzrostu stóp procentowych</h1>
+            <span>Kredyt: {{loanAmount | currency : "PLN"}}</span>&nbsp;&nbsp;<span>Okres: {{loanYears}} lat</span>
+            <br><br>
+            <table mat-table [dataSource]="symulacja" class="mat-elevation-z8">
+
+                <!--- Note that these columns can be defined in any order.
+                  The actual rendered columns are set as a property on the row definition" -->
+
+
+                <ng-container matColumnDef="stopaProcentowa">
+                    <th mat-header-cell *matHeaderCellDef> % </th>
+                    <td mat-cell *matCellDef="let element">
+                        <span *ngIf="element.interestRate != interestRate"> {{element.interestRate}} % </span>
+                        <span *ngIf="element.interestRate == interestRate"> {{element.interestRate}} %</span>
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="rata">
+                    <th mat-header-cell *matHeaderCellDef> Rata </th>
+                    <td mat-cell *matCellDef="let element">
+                        <span> {{element.monthlyPayment | currency : "PLN" }}</span>
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="rataOdsetki">
+                    <th mat-header-cell *matHeaderCellDef> Odsetki</th>
+                    <td mat-cell *matCellDef="let element">
+                        <span> {{element.pierwszaRata.odsetki | currency : "PLN" }}</span>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="rataKapital">
+                    <th mat-header-cell *matHeaderCellDef> Kapitał </th>
+                    <td mat-cell *matCellDef="let element">
+                        <span> {{element.pierwszaRata.kapital | currency : "PLN" }}</span>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="10odsetki">
+                    <th mat-header-cell *matHeaderCellDef> Odserki 10 lat</th>
+                    <td mat-cell *matCellDef="let element">
+                        <span> {{element.odsetkiSuma10Lat | currency : "PLN"}}</span>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="10kapital">
+                    <th mat-header-cell *matHeaderCellDef> Kapitał 10 lat</th>
+                    <td mat-cell *matCellDef="let element">
+                        <span> {{element.kapitalSuma10Lat | currency : "PLN"}}</span>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="odsetkiSuma">
+                    <th mat-header-cell *matHeaderCellDef> Odserki suma </th>
+                    <td mat-cell *matCellDef="let element">
+                        <span> {{element.odsetkiSuma | currency : "PLN"}}</span>
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="calyKoszt">
+                    <th mat-header-cell *matHeaderCellDef>Koszt całkowity</th>
+                    <td mat-cell *matCellDef="let element">
+                        <span> {{element.splataRazem | currency : "PLN"}}</span>
+                    </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="simulationDisplayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: simulationDisplayedColumns;"></tr>
+            </table>
+        </div>
+    </div>
+
+</div>
+<br>
+<br>
