--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,59 +1,72 @@
 <router-outlet></router-outlet>
 
 <br>
-<div class="container">
+<div class="container-xxl">
     <div class="row">
         <h1>Kalkulator kredytowy</h1>
-        <div class="col-6">
+        <div class="col-md-6">
             <div class="mt-1">
-                <span>1K </span>
-                <mat-slider thumbLabel [displayWith]="formatAmount" aria-label="units" [min]="1000" [max]="1000000" [step]="1000" style="width: 90%;" [(ngModel)]="loanAmount" (ngModelChange)="recalculateLoan()"></mat-slider>
-                <span>1M </span>
+                <span class="slider-label">1K</span>
+                <mat-slider thumbLabel [displayWith]="formatAmount" aria-label="units" [min]="10000" [max]="1000000" [step]="10000" style="width:80%;" [(ngModel)]="loanAmount" (ngModelChange)="recalculateLoan()"></mat-slider>
+                <span class="slider-label">1M</span>
             </div>
         </div>
-        <div class="col-2">
+        <div class="col-md-6 d-none d-md-block">
             <mat-form-field class="example-full-width">
                 <mat-label>Kwota kredytu</mat-label>
-                <input type="number" min="1000" max="1000000" matInput [(ngModel)]="loanAmount" (ngModelChange)="recalculateLoan()">
+                <input type="number" step="10000" min="10000" max="1000000" matInput [(ngModel)]="loanAmount" (ngModelChange)="recalculateLoan()">
             </mat-form-field>
         </div>
     </div>
     <div class="row">
-        <div class="col-6">
+        <div class="col-md-6">
             <div class="mt-1">
-                <span>1 </span>
-                <mat-slider thumbLabel [min]="1" [max]="30" [step]="1" style="width: 90%;" [(ngModel)]="loanYears" (ngModelChange)="recalculateLoan()"></mat-slider>
-                <span>30 </span>
+                <span class="slider-label">1</span>
+                <mat-slider thumbLabel [min]="1" [max]="30" [step]="1" style="width: 80%;" [(ngModel)]="loanYears" (ngModelChange)="recalculateLoan()"></mat-slider>
+                <span class="slider-label">30</span>
             </div>
         </div>
-        <div class="col-2">
+        <div class="col-md-6 d-none d-md-block">
             <mat-form-field class="example-full-width">
-                <mat-label>Czas kredytu w latach</mat-label>
+                <mat-label>Okres spłaty</mat-label>
                 <input type="number" min="1" max="30" matInput [(ngModel)]="loanYears" (ngModelChange)="recalculateLoan()">
             </mat-form-field>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-6">
+        <div class="col-md-6">
             <div class="mt-1">
-                <span>0.1%</span>
-                <mat-slider thumbLabel [displayWith]="formatIntersetRate" [min]="0.10" [max]="30" [step]="0.01" style="width: 90%;" [(ngModel)]="interestRate" (ngModelChange)="recalculateLoan()"></mat-slider>
-                <span>30%</span>
+                <span class="slider-label">0.1%</span>
+                <mat-slider thumbLabel [displayWith]="formatIntersetRate" [min]="0.10" [max]="30" [step]="0.01" style="width: 80%;" [(ngModel)]="interestRate" (ngModelChange)="recalculateLoan()"></mat-slider>
+                <span class="slider-label">30%</span>
             </div>
         </div>
-        <div class="col-2">
+        <div class="col-md-6 d-none d-md-block">
             <mat-form-field class="example-full-width">
                 <mat-label>Oprocentowanie</mat-label>
-                <input type="number" min="0.0" max="30" matInput [(ngModel)]="interestRate" (ngModelChange)="recalculateLoan()">
+                <input type="number" min="0.0" step="0.1" max="30" matInput [(ngModel)]="interestRate" (ngModelChange)="recalculateLoan()">
             </mat-form-field>
         </div>
     </div>
+    <div class="row summary-parameters">
+        <div class="col-md-5">
+            <p class="center" style="font-size: 30px;">Kwota kredytu : <b>{{loanAmount | currency : "PLN"}}</b></p>
+        </div>
+        <div class="col-md-7">
+            <p class="center2" style="font-size: 23px;">
+                Okres spłaty w latach : <b>{{loanYears }}</b>
+            </p>
+            <p class="center2" style="font-size: 23px;">
+                Oprocentowanie (WIBOR + marża) : <b>{{interestRate}} %</b>
+            </p>
+        </div>
+    </div>
     <div class="row summary">
-        <div class="col-5">
+        <div class="col-md-5">
             <p class="center" style="font-size: 30px;">Rata miesięczna : <b>{{loan.monthlyPayment | currency : "PLN"}}</b></p>
         </div>
-        <div class="col-4">
+        <div class="col-md-7">
             <p class="center2" style="font-size: 23px;">
                 Odsetki suma : <b>{{loan.odsetkiSuma | currency : "PLN" }}</b>
             </p>
@@ -64,46 +77,8 @@
     </div>
     <br>
     <div class="row">
-
-        <div class="col-4">
-            <h1>Harmonogram spłat</h1>
-            <table mat-table [dataSource]="loan.harmonogram" class="mat-elevation-z8">
-
-                <!--- Note that these columns can be defined in any order.
-                  The actual rendered columns are set as a property on the row definition" -->
-
-                <!-- Position Column -->
-                <ng-container matColumnDef="miesiac">
-                    <th mat-header-cell *matHeaderCellDef> Miesiąc </th>
-                    <td mat-cell *matCellDef="let element"> {{element.numerMiesiaca}} </td>
-                </ng-container>
-
-                <!-- Name Column -->
-                <ng-container matColumnDef="kwota">
-                    <th mat-header-cell *matHeaderCellDef> Kwota do spłaty</th>
-                    <td mat-cell *matCellDef="let element"> {{element.kwotaKredytu | currency : "PLN"}} </td>
-                </ng-container>
-
-                <!-- Weight Column -->
-                <ng-container matColumnDef="odsetki">
-                    <th mat-header-cell *matHeaderCellDef> Odsetki </th>
-                    <td  mat-cell *matCellDef="let element"> {{element.odsetki | currency : "PLN"}} </td>
-                </ng-container>
-
-                <!-- Symbol Column -->
-                <ng-container matColumnDef="kapital">
-                    <th mat-header-cell *matHeaderCellDef> Kapitał </th>
-                    <td mat-cell *matCellDef="let element"> {{element.kapital | currency : "PLN"}} </td>
-                </ng-container>
-
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-        </div>
-        <div class="col-6">
+        <div class="col-md-8">
             <h1>Symulacja wzrostu stóp procentowych</h1>
-            <span>Kredyt: {{loanAmount | currency : "PLN"}}</span>&nbsp;&nbsp;<span>Okres: {{loanYears}} lat</span>
-            <br><br>
             <table mat-table [dataSource]="symulacja" class="mat-elevation-z8">
 
                 <!--- Note that these columns can be defined in any order.
@@ -167,6 +142,42 @@
                 <tr mat-row *matRowDef="let row; columns: simulationDisplayedColumns;"></tr>
             </table>
         </div>
+        <div class="col-md-4">
+            <h1>Harmonogram spłat</h1>
+            <table mat-table [dataSource]="loan.harmonogram" class="mat-elevation-z8">
+
+                <!--- Note that these columns can be defined in any order.
+                  The actual rendered columns are set as a property on the row definition" -->
+
+                <!-- Position Column -->
+                <ng-container matColumnDef="miesiac">
+                    <th mat-header-cell *matHeaderCellDef> Miesiąc </th>
+                    <td mat-cell *matCellDef="let element"> {{element.numerMiesiaca}} </td>
+                </ng-container>
+
+                <!-- Name Column -->
+                <ng-container matColumnDef="kwota">
+                    <th mat-header-cell *matHeaderCellDef> Kwota do spłaty</th>
+                    <td mat-cell *matCellDef="let element"> {{element.kwotaKredytu | currency : "PLN"}} </td>
+                </ng-container>
+
+                <!-- Weight Column -->
+                <ng-container matColumnDef="odsetki">
+                    <th mat-header-cell *matHeaderCellDef> Odsetki </th>
+                    <td  mat-cell *matCellDef="let element"> {{element.odsetki | currency : "PLN"}} </td>
+                </ng-container>
+
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="kapital">
+                    <th mat-header-cell *matHeaderCellDef> Kapitał </th>
+                    <td mat-cell *matCellDef="let element"> {{element.kapital | currency : "PLN"}} </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
+       
     </div>
 
 </div>
