--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,7 +44,7 @@
         </div>
         <div class="col-md-6 d-none d-md-block">
             <mat-form-field class="example-full-width">
-                <mat-label>Oprocentowanie</mat-label>
+                <mat-label>Oprocentowanie (WIBOR + marża)</mat-label>
                 <input type="number" min="0.0" step="0.1" max="30" matInput [(ngModel)]="interestRate" (ngModelChange)="recalculateLoan()">
             </mat-form-field>
         </div>
