--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,7 +77,7 @@
     </div>
     <br>
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-xl-8">
             <h1>Symulacja zmiany stóp procentowych</h1>
             <table mat-table [dataSource]="symulacja" class="mat-elevation-z8">
 
@@ -141,7 +141,7 @@
                 <tr mat-row *matRowDef="let row; columns: simulationDisplayedColumns;"></tr>
             </table>
         </div>
-        <div class="col-md-4">
+        <div class="col-xl-4">
             <h1>Harmonogram spłat</h1>
             <table mat-table [dataSource]="loan.harmonogram" class="mat-elevation-z8">
 
