--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -75,110 +75,114 @@
             </p>
         </div>
     </div>
+
     <br>
-    <div class="row">
-        <div class="col-xl-8">
-            <h1>Symulacja zmiany stóp procentowych</h1>
-            <table mat-table [dataSource]="symulacja" class="mat-elevation-z8">
+    <mat-tab-group>
+        <mat-tab label="Symulacja zmiany stóp procentowych">
+            <div class="tab-content">
+                <!--  <h1>Symulacja zmiany stóp procentowych</h1> -->
+                <table mat-table [dataSource]="symulacja" class="mat-elevation-z8">
 
-                <!--- Note that these columns can be defined in any order.
+                    <!--- Note that these columns can be defined in any order.
                   The actual rendered columns are set as a property on the row definition" -->
 
 
-                <ng-container matColumnDef="stopaProcentowa">
-                    <th mat-header-cell *matHeaderCellDef> % </th>
-                    <td [ngClass] = "{'current-row': element.current}" mat-cell *matCellDef="let element">
-                        <span> {{element.interestRate}} % </span>
-                    </td>
-                </ng-container>
+                    <ng-container matColumnDef="stopaProcentowa">
+                        <th mat-header-cell *matHeaderCellDef> % </th>
+                        <td [ngClass]="{'current-row': element.current}" mat-cell *matCellDef="let element">
+                            <span> {{element.interestRate}} % </span>
+                        </td>
+                    </ng-container>
 
-                <ng-container matColumnDef="rata">
-                    <th mat-header-cell *matHeaderCellDef> Rata </th>
-                    <td [ngClass] = "{'current-row': element.current}" mat-cell *matCellDef="let element">
-                        <span> {{element.monthlyPayment | currency : "PLN" }}</span>
-                    </td>
-                </ng-container>
+                    <ng-container matColumnDef="rata">
+                        <th mat-header-cell *matHeaderCellDef> Rata </th>
+                        <td [ngClass]="{'current-row': element.current}" mat-cell *matCellDef="let element">
+                            <span> {{element.monthlyPayment | currency : "PLN" }}</span>
+                        </td>
+                    </ng-container>
 
-                <ng-container matColumnDef="rataOdsetki">
-                    <th mat-header-cell *matHeaderCellDef> Odsetki</th>
-                    <td [ngClass] = "{'current-row': element.current}" mat-cell *matCellDef="let element">
-                        <span> {{element.pierwszaRata.odsetki | currency : "PLN" }}</span>
-                    </td>
-                </ng-container>
-                <ng-container matColumnDef="rataKapital">
-                    <th mat-header-cell *matHeaderCellDef> Kapitał </th>
-                    <td [ngClass] = "{'current-row': element.current}" mat-cell *matCellDef="let element">
-                        <span> {{element.pierwszaRata.kapital | currency : "PLN" }}</span>
-                    </td>
-                </ng-container>
-                <ng-container matColumnDef="10odsetki">
-                    <th mat-header-cell *matHeaderCellDef> Odserki 10 lat</th>
-                    <td [ngClass] = "{'current-row': element.current}" mat-cell *matCellDef="let element">
-                        <span> {{element.odsetkiSuma10Lat | currency : "PLN"}}</span>
-                    </td>
-                </ng-container>
-                <ng-container matColumnDef="10kapital">
-                    <th mat-header-cell *matHeaderCellDef> Kapitał 10 lat</th>
-                    <td [ngClass] = "{'current-row': element.current}" mat-cell *matCellDef="let element">
-                        <span> {{element.kapitalSuma10Lat | currency : "PLN"}}</span>
-                    </td>
-                </ng-container>
-                <ng-container matColumnDef="odsetkiSuma">
-                    <th mat-header-cell *matHeaderCellDef> Odserki suma </th>
-                    <td [ngClass] = "{'current-row': element.current}" mat-cell *matCellDef="let element">
-                        <span> {{element.odsetkiSuma | currency : "PLN"}}</span>
-                    </td>
-                </ng-container>
+                    <ng-container matColumnDef="rataOdsetki">
+                        <th mat-header-cell *matHeaderCellDef> Odsetki</th>
+                        <td [ngClass]="{'current-row': element.current}" mat-cell *matCellDef="let element">
+                            <span> {{element.pierwszaRata.odsetki | currency : "PLN" }}</span>
+                        </td>
+                    </ng-container>
+                    <ng-container matColumnDef="rataKapital">
+                        <th mat-header-cell *matHeaderCellDef> Kapitał </th>
+                        <td [ngClass]="{'current-row': element.current}" mat-cell *matCellDef="let element">
+                            <span> {{element.pierwszaRata.kapital | currency : "PLN" }}</span>
+                        </td>
+                    </ng-container>
+                    <ng-container matColumnDef="10odsetki">
+                        <th mat-header-cell *matHeaderCellDef> Odserki 10 lat</th>
+                        <td [ngClass]="{'current-row': element.current}" mat-cell *matCellDef="let element">
+                            <span> {{element.odsetkiSuma10Lat | currency : "PLN"}}</span>
+                        </td>
+                    </ng-container>
+                    <ng-container matColumnDef="10kapital">
+                        <th mat-header-cell *matHeaderCellDef> Kapitał 10 lat</th>
+                        <td [ngClass]="{'current-row': element.current}" mat-cell *matCellDef="let element">
+                            <span> {{element.kapitalSuma10Lat | currency : "PLN"}}</span>
+                        </td>
+                    </ng-container>
+                    <ng-container matColumnDef="odsetkiSuma">
+                        <th mat-header-cell *matHeaderCellDef> Odserki suma </th>
+                        <td [ngClass]="{'current-row': element.current}" mat-cell *matCellDef="let element">
+                            <span> {{element.odsetkiSuma | currency : "PLN"}}</span>
+                        </td>
+                    </ng-container>
 
-                <ng-container matColumnDef="calyKoszt">
-                    <th mat-header-cell *matHeaderCellDef>Koszt całkowity</th>
-                    <td [ngClass] = "{'current-row': element.current}" mat-cell *matCellDef="let element">
-                        <span> {{element.splataRazem | currency : "PLN"}}</span>
-                    </td>
-                </ng-container>
+                    <ng-container matColumnDef="calyKoszt">
+                        <th mat-header-cell *matHeaderCellDef>Koszt całkowity</th>
+                        <td [ngClass]="{'current-row': element.current}" mat-cell *matCellDef="let element">
+                            <span> {{element.splataRazem | currency : "PLN"}}</span>
+                        </td>
+                    </ng-container>
 
-                <tr mat-header-row *matHeaderRowDef="simulationDisplayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: simulationDisplayedColumns;"></tr>
-            </table>
-        </div>
-        <div class="col-xl-4">
-            <h1>Harmonogram spłat</h1>
-            <table mat-table [dataSource]="loan.harmonogram" class="mat-elevation-z8">
+                    <tr mat-header-row *matHeaderRowDef="simulationDisplayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: simulationDisplayedColumns;"></tr>
+                </table>
+            </div>
+        </mat-tab>
+        <mat-tab label="Harmonogram spłat">
+            <div class="tab-content">
+                <!--  <h1>Harmonogram spłat</h1> -->
+                <table mat-table [dataSource]="loan.harmonogram" class="mat-elevation-z8">
 
-                <!--- Note that these columns can be defined in any order.
+                    <!--- Note that these columns can be defined in any order.
                   The actual rendered columns are set as a property on the row definition" -->
 
-                <!-- Position Column -->
-                <ng-container matColumnDef="miesiac">
-                    <th mat-header-cell *matHeaderCellDef> Miesiąc </th>
-                    <td mat-cell *matCellDef="let element"> {{element.numerMiesiaca}} </td>
-                </ng-container>
+                    <!-- Position Column -->
+                    <ng-container matColumnDef="miesiac">
+                        <th mat-header-cell *matHeaderCellDef> Miesiąc </th>
+                        <td mat-cell *matCellDef="let element"> {{element.numerMiesiaca}} </td>
+                    </ng-container>
 
-                <!-- Name Column -->
-                <ng-container matColumnDef="kwota">
-                    <th mat-header-cell *matHeaderCellDef> Kwota do spłaty</th>
-                    <td mat-cell *matCellDef="let element"> {{element.kwotaKredytu | currency : "PLN"}} </td>
-                </ng-container>
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="kwota">
+                        <th mat-header-cell *matHeaderCellDef> Kwota do spłaty</th>
+                        <td mat-cell *matCellDef="let element"> {{element.kwotaKredytu | currency : "PLN"}} </td>
+                    </ng-container>
 
-                <!-- Weight Column -->
-                <ng-container matColumnDef="odsetki">
-                    <th mat-header-cell *matHeaderCellDef> Odsetki </th>
-                    <td  mat-cell *matCellDef="let element"> {{element.odsetki | currency : "PLN"}} </td>
-                </ng-container>
+                    <!-- Weight Column -->
+                    <ng-container matColumnDef="odsetki">
+                        <th mat-header-cell *matHeaderCellDef> Odsetki </th>
+                        <td mat-cell *matCellDef="let element"> {{element.odsetki | currency : "PLN"}} </td>
+                    </ng-container>
 
-                <!-- Symbol Column -->
-                <ng-container matColumnDef="kapital">
-                    <th mat-header-cell *matHeaderCellDef> Kapitał </th>
-                    <td mat-cell *matCellDef="let element"> {{element.kapital | currency : "PLN"}} </td>
-                </ng-container>
+                    <!-- Symbol Column -->
+                    <ng-container matColumnDef="kapital">
+                        <th mat-header-cell *matHeaderCellDef> Kapitał </th>
+                        <td mat-cell *matCellDef="let element"> {{element.kapital | currency : "PLN"}} </td>
+                    </ng-container>
 
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-        </div>
-       
-    </div>
-
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+            </div>
+        </mat-tab>
+    </mat-tab-group>
+    <br>
 </div>
 <br>
 <br>
