--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -51,3 +51,28 @@ mat-radio-button
     padding: 20px;
 }
 
+
+.diff-amount{
+    color: red;
+    font-size: 10px;
+}
+
+.diff-percent{
+    font-size: 10px;
+    color: white;
+    background: red;
+    margin-left: 2px;
+    border-radius: 4px;
+    padding: 1px 4px;
+    margin-right: 2px;
+
+}
+
+.diff-green .diff-amount{
+    color: rgb(20, 172, 0);
+}
+
+.diff-green .diff-percent{
+    background: rgb(20, 172, 0);
+}
+
