--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
         <h1>Kalkulator kredytowy</h1>
         <div class="col-md-6">
             <div class="mt-1">
-                <span class="slider-label">1K</span>
+                <span class="slider-label">10K</span>
                 <mat-slider thumbLabel [displayWith]="formatAmount" aria-label="units" [min]="10000" [max]="1000000" [step]="10000" style="width:80%;" [(ngModel)]="loanAmount" (ngModelChange)="recalculateLoan()"></mat-slider>
                 <span class="slider-label">1M</span>
             </div>
@@ -28,7 +28,7 @@
         </div>
         <div class="col-md-6 d-none d-md-block">
             <mat-form-field class="example-full-width">
-                <mat-label>Okres spłaty</mat-label>
+                <mat-label>Okres spłaty w latach</mat-label>
                 <input type="number" min="1" max="30" matInput [(ngModel)]="loanYears" (ngModelChange)="recalculateLoan()">
             </mat-form-field>
         </div>
@@ -71,7 +71,7 @@
                 Odsetki suma : <b>{{loan.odsetkiSuma | currency : "PLN" }}</b>
             </p>
             <p class="center2" style="font-size: 23px;">
-                Spłata razem : <b>{{loan.splataRazem | currency : "PLN"}}</b>
+                Spłata razem  :&nbsp; <b>{{loan.splataRazem | currency : "PLN"}}</b>
             </p>
         </div>
     </div>
@@ -123,7 +123,7 @@
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="10odsetki">
-                        <th mat-header-cell *matHeaderCellDef> Odserki 10 lat</th>
+                        <th mat-header-cell *matHeaderCellDef> Odsetki 10 lat</th>
                         <td [ngClass]="{'current-row': element.current}" mat-cell *matCellDef="let element">
                             <span> {{element.odsetkiSuma10Lat | currency : "PLN"}}</span>
                             <div *ngIf="!element.current" [ngClass]="{'diff-green': element.odsetki10Diff < 0}">
@@ -141,7 +141,7 @@
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="odsetkiSuma">
-                        <th mat-header-cell *matHeaderCellDef> Odserki suma </th>
+                        <th mat-header-cell *matHeaderCellDef> Odsetki suma </th>
                         <td [ngClass]="{'current-row': element.current}" mat-cell *matCellDef="let element">
                             <span> {{element.odsetkiSuma | currency : "PLN"}}</span>
                             <div *ngIf="!element.current" [ngClass]="{'diff-green': element.odsetkiSumaDiff < 0}">
