--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -161,6 +161,7 @@ mat-radio-button
       -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 1);
       -moz-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 1);
       box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 1);
+      background-color: transparent;
      
   }
 
