added percents to payment

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -124,8 +124,8 @@
                 <br>
                 <div>
                     <div class="progress-labels">
-                        <div class="float-start">RATA KAPITAŁOWA</div>
-                        <div class="float-end">RATA ODSETKOWA</div>
+                        <div class="float-start">RATA KAPITAŁOWA : {{loan.pierwszaRata?.kapitalPercent?.toFixed(2)}} %</div>
+                        <div class="float-end">RATA ODSETKOWA : {{loan.pierwszaRata?.odsetkiPercent?.toFixed(2)}} %</div>
                         <div class="clearfix"></div>
                     </div>
                 </div>
